doc:swagger entry for  auth/ login
