# docs/swagger.yaml
@@ -136,6 +136,34 @@ definitions:
       status:
         type: integer
     type: object
+  github.com_saferwall_saferwall-api_internal_auth.loginRequest:
+    properties:
+      password:
+        maxLength: 30
+        minLength: 8
+        type: string
+      username:
+        maxLength: 20
+        minLength: 1
+        type: string
+    required:
+    - password
+    - username
+    type: object
+  internal_auth.loginRequest:
+    properties:
+      password:
+        maxLength: 30
+        minLength: 8
+        type: string
+      username:
+        maxLength: 20
+        minLength: 1
+        type: string
+    required:
+    - password
+    - username
+    type: object
 host: api.saferwall.com
 info:
   contact:
@@ -191,7 +219,13 @@ paths:
     post:
       consumes:
       - multipart/form-data
-      description: Upload file for analysis
+      description: Upload file for analysis.
+      parameters:
+      - description: binary file
+        in: formData
+        name: file
+        required: true
+        type: file
       produces:
       - application/json
       responses:
@@ -254,7 +288,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Retrieves the content of a file report
+      description: Retrieves the content of a file report.
       parameters:
       - description: File SHA256
         in: path
@@ -347,7 +381,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Retrieves the information about a user
+      description: Retrieves information about a user
       parameters:
       - description: User ID
         in: path
@@ -369,7 +403,11 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/errors.ErrorResponse'
-      summary: Get a user information
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errors.ErrorResponse'
+      summary: Get user information by user ID
       tags:
       - user
 schemes:
